# git-workscene

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  index.html  package-lock.json  package.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: UPDATES.md
docs/git-worktree-visual-manager/plans/: 2026-05-26-mvp.md
docs/git-worktree-visual-manager/specs/: 2026-05-26-design.md
src/: App.test.tsx  App.tsx  main.tsx  styles.css  styles.test.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: git.rs  lib.rs  main.rs  models.rs  safety.rs  sandbox.rs  storage.rs
src/components/: ActivityLog.tsx  CanvasView.tsx  Inspector.test.tsx  Inspector.tsx  RepoSidebar.tsx
src/lib/: api.test.ts  api.ts  graph.test.ts  graph.ts  types.ts
src/test/: capabilities.test.ts  fixtures.ts
