[package]
name = "git-worktree-visual-manager"
version = "0.1.0"
description = "A visual manager for local Git branches and worktrees"
authors = ["jamtinlu"]
edition = "2021"

[lib]
name = "git_worktree_visual_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"

[dev-dependencies]
tempfile = "3"
