[package]
name = "git-workscene"
version = "0.1.2"
description = "A visual desktop workspace for local Git branches and worktrees"
authors = ["jamtinlu"]
edition = "2021"

[lib]
name = "git_worktree_visual_manager_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
rusqlite = { version = "0.40", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tauri-plugin-process = "2.3.1"
tauri-plugin-updater = "2.10.1"

[dev-dependencies]
tempfile = "3"
